<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        android:enabled="true"/>

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/map_icon"
        android:title="@string/map"
        android:enabled="true"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        android:enabled="true"/>

    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/info_icon"
        android:title="@string/info"
        android:enabled="true"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        android:enabled="true"/>
</menu>